--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,12 @@
 
 
     <string name="simple_fragment_transition">sssssssssssssssssssssss</string>
+
+    <string-array name="College">
+        <item>BITS PILANI</item>
+        <item>BITS GOA</item>
+        <item>BITS HYDERABAD</item>
+        <item>IIT DELHI</item>
+        <item>MANIPAL UNIVERSITY</item>
+    </string-array>
 </resources>
